manifests/applications/mealie/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mealie
    tier: frontend
  name: mealie-prod-frontend-deployment
  namespace: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mealie
        tier: frontend
    spec:
      containers:
      - name: mealie
        image: ghcr.io/mealie-recipes/mealie:nightly
        ports:
          - containerPort: 9000
            name: http
            protocol: TCP
        volumeMounts:
          - name: data
            mountPath: /app/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mealie-prod-pvc
