manifests/applications/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie-prod-svc
  namespace: mealie
  labels:
    app: mealie
spec:
  selector:
    app: mealie
    tier: frontend
  ports:
    - port: 9000
      targetPort: http
      name: http
      protocol: TCP
